--- a/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/incidents-tab.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/incidents-tab.html
@@ -2,11 +2,12 @@
   <thead>
     <tr>
       <th>Message</th>
-      <th>Type</th>
       <th>Timestamp</th>
       <th>Activity</th>
       <th>Cause Process Instance Id</th>
       <th>Root Cause Process Instance Id</th>
+      <th>Type</th>
+      <th>Action</th>
     </tr>
   </thead>
   <tbody>
@@ -31,12 +32,7 @@
             <span ng-show="incident.rootCauseIncidentMessage">{{ incident.rootCauseIncidentMessage }}</span>
             <span ng-hide="incident.rootCauseIncidentMessage"><i>Message is null.</i></span>
           </span>
-
-
         </div>
-      </td>
-      <td>
-        {{ getIncidentType(incident) }}
       </td>
       <td>
         {{ incident.incidentTimestamp }}
@@ -65,17 +61,28 @@
             {{ incident.rootCauseIncidentProcessInstanceId | shorten:8}}
           </a>
         </span>
-      </td>      
+      </td>
+      <td>
+        {{ getIncidentType(incident) }}
+      </td>
+      <td>
+        <a class="btn action-button" ng-click="openJobRetryDialog(incident)" ng-show="incident.incidentType === 'failedJob' && incident.configuration"
+           help
+           help-text="Increment Number of Retries of Failed Job"
+           help-placement="'left'">
+          <i class="icon-repeat"></i>
+        </a>
+      </td>
     </tr>
 
     <tr ng-if="!incidents">
-      <td colspan="6">
+      <td colspan="7">
         <i class="icon-loading"></i> loading incidents...
       </td>
     </tr>    
   
     <tr ng-if="incidents && !incidents.length">
-      <td  colspan="6">
+      <td  colspan="7">
         No incidents
       </td>
     </tr>
