--- a/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/job-retry-dialog.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/job-retry-dialog.html
@@ -5,88 +5,30 @@
 <div class="modal-body">
   <div notifications-panel></div>
 
-  <form name="selectFailedJobsForm" ng-hide="status === 'finished' || status === 'performing'">
-    <fieldset>
-      <p>Select one of the following failed jobs to increment their number of retries:</p>
-      <table class="table table-bordered table-hover table-condensed">
-        <thead>
-          <th class="row-select">
-            <input type="checkbox" title="Select all" ng-model="allJobsSelected" ng-click="selectAllJobs(allJobsSelected)">
-          </th>
-          <th>ID</th>
-          <th>Scope</th>
-          <th>Exception</th>
-        </thead>
-        <tbody>
-          <tr ng-repeat="job in failedJobs">
-            <td class="row-select">
-              <input type="checkbox" ng-model="job.selected" ng-click="selectFailedJob(job)">
-            </td>
-            <td>{{ job.id | shorten:8 }}</td>
-            <td>{{ job.instance.name }}</td>
-            <td>{{ job.exceptionMessage }}</td>
-          </tr>
+  <div ng-hide="status === 'finished' || status === 'failed'">
+    <p>The number of retries of the corresponding failed job of the selected incident will be incremented.</p>
+    <p>Are you sure to increment the number of retries?</p>
+  </div>
 
-          <tr ng-if="!failedJobs">
-            <td colspan="4">
-              <i class="icon-loading"></i> loading failed jobs...
-            </td>
-          </tr>
+  <div ng-show="status === 'finished'">
+    The number of retries of the corresponding failed job of the selected incident has been incremented successfully.
+  </div>
 
-          <tr ng-if="failedJobs && !failedJobs.length">
-            <td  colspan="4">
-              There are no failed jobs available to increment their retries.
-            </td>
-          </tr>
-
-        </tbody>
-      </table>
-
-      <div paginator total-pages="jobPages.total" current-page="jobPages.current"></div>
-    </fieldset>
-  </form>
-
-  <div ng-show="status === 'finished' || status === 'performing'">
-
-    <table class="table table-bordered table-hover table-condensed">
-      <thead>
-        <th>ID</th>
-        <th>Scope</th>
-        <th>Status</th>
-      </thead>
-      <tbody>
-        <tr ng-repeat="job in showJobsRetried">
-          <td>{{ job.id | shorten:8 }}</td>
-          <td>{{ job.instance.name }}</td>
-          <td>
-            <span ng-show="job.status && job.status === 'performing'">
-              <i class="icon-loading"></i>
-            </span>
-            <span ng-show="job.status && job.status === 'successful'">
-              <i class="icon-ok"></i>&nbsp;Successful
-            </span>
-            <span ng-show="job.status && job.status === 'failed'">
-              <i class="icon-remove"></i>&nbsp;Failed
-            </span>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-
-    <div paginator total-pages="summarizePages.total" current-page="summarizePages.current"></div>
+  <div ng-show="status === 'failed'">
+    The number of retries of the corresponding failed job of the selected incident could not been incremented successfully.
   </div>
 
 </div>
 
 <div class="modal-footer">
-  <button class="btn" ng-click="close()"
-          ng-hide="status === 'finished' || status === 'performing'">Close</button>
-
-  <button class="btn btn-primary" ng-click="retryFailedJobs(selectedFailedJobIds)"
-          ng-disabled="!failedJobs || !failedJobs.length || !selectedFailedJobIds.length"
-          ng-hide="status === 'finished' || status === 'performing'">Retry</button>
-
-  <button class="btn btn-primary" ng-click="close()"
+  <button class="btn" ng-click="close(status)"
           ng-disabled="status === 'performing'"
-          ng-show="status === 'performing' || status === 'finished'">OK</button>
+          ng-hide="status === 'finished' || status === 'failed'">Close</button>
+
+  <button type="submit" class="btn btn-primary" ng-click="incrementRetry()"
+          ng-hide="status === 'finished' || status === 'failed'"
+          ng-disabled="status === 'performing'">Retry</button>
+
+  <button class="btn btn-primary" ng-click="close(status)"
+          ng-show="status === 'finished' || status === 'failed'">OK</button>
 </div>
