fix(cockpit/page reload): This commit improve several is supposed to fix the scope lost and page reload encounter when a link in the tabs is clicked.
It also improves (a bit) the javascript build tools and processes:

- use the [newer](http://npmjs.org/package/grunt-newer) to speed up the copying of watched files
- prevent the tests to be automatically runned when a file is changed
- allow livereload feature to be runned on a different port
- prevent the livereload snippet in require-conf.js to be parsed as a jsDoc comment block
- refactor the bootstraping modules of cockpit, admin and tasklist by moving some functions in the require-conf.js

--- a/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/incidents-tab.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/incidents-tab.html
@@ -39,25 +39,26 @@
       </td>
       <td>
         <span ng-show="incident.linkable">
-          <a href="#/process-instance/{{ processInstance.id }}?activityIds={{ incident.activityId }}">
+          <a ng-click="selectActivity(incident.activityId, $event)"
+             ng-href="#/process-instance/{{ processInstance.id }}?activityIds={{ incident.activityId }}&amp;detailsTab=job-definition-table">
             {{ incident.activityName }}
           </a>
         </span>
         <span ng-hide="incident.linkable">
           {{ incident.activityName }}
         </span>
-        
+
       </td>
       <td>
         <span ng-show="incident.causeIncidentProcessInstanceId !== incident.processInstanceId" >
-          <a href="#/process-instance/{{incident.causeIncidentProcessInstanceId}}?activityIds={{ incident.causeIncidentActivityId }}&detailsTab=incidents-tab">
+          <a href="#/process-instance/{{incident.causeIncidentProcessInstanceId}}?activityIds={{ incident.causeIncidentActivityId }}&amp;detailsTab=incidents-tab">
             {{ incident.causeIncidentProcessInstanceId | shorten:8}}
           </a>
         </span>
       </td>
       <td>
         <span ng-show="incident.rootCauseIncidentProcessInstanceId !== incident.processInstanceId" >
-          <a href="#/process-instance/{{incident.rootCauseIncidentProcessInstanceId}}?activityIds={{ incident.rootCauseIncidentActivityId }}&detailsTab=incidents-tab">
+          <a href="#/process-instance/{{incident.rootCauseIncidentProcessInstanceId}}?activityIds={{ incident.rootCauseIncidentActivityId }}&amp;detailsTab=incidents-tab">
             {{ incident.rootCauseIncidentProcessInstanceId | shorten:8}}
           </a>
         </span>
@@ -79,8 +80,8 @@
       <td colspan="7">
         <i class="icon-loading"></i> loading incidents...
       </td>
-    </tr>    
-  
+    </tr>
+
     <tr ng-if="incidents && !incidents.length">
       <td  colspan="7">
         No incidents
