--- a/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/called-process-instance-table.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/called-process-instance-table.html
@@ -17,7 +17,8 @@
         </a>
       </td>
       <td>
-        <a href="#/process-instance/{{ processInstance.id }}?activityInstanceIds={{ calledProcessInstance.instance.id }}">
+        <a ng-click="selectActivity(calledProcessInstance.instance.id, $event)"
+           ng-href="#/process-instance/{{ processInstance.id }}?activityInstanceIds={{ calledProcessInstance.instance.id }}">
           {{ calledProcessInstance.instance.name }}
         <a>
       </td>
