docs(cockpit/templates): add template starting and ending comments
It helps to find in which template you might have to make change when you use the browser developer tools.
Those comments are striped out when building for production with grunt.

--- a/client/webapp/src/main/webapp/plugin/base/app/views/processDefinition/called-process-definition-table.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processDefinition/called-process-definition-table.html
@@ -1,3 +1,4 @@
+<!-- # CE - src/main/webapp/plugin/base/views/processDefinition/called-process-definition-table.html -->
 <table class="table table-bordered table-hover table-condensed">
   <thead>
     <th>Called Process Definition</th>
@@ -45,3 +46,4 @@
 
   </tbody>
 </table>
+<!-- / CE - src/main/webapp/plugin/base/views/processDefinition/called-process-definition-table.html -->
