--- a/client/webapp/src/main/webapp/plugin/base/app/views/processDefinition/process-instance-table.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processDefinition/process-instance-table.html
@@ -1,3 +1,4 @@
+<!-- # CE - src/main/webapp/plugin/base/views/processDefinition/process-instance-table.html -->
 <table class="table table-bordered table-hover table-condensed table-filter">
   <thead>
     <tr>
@@ -17,7 +18,7 @@
       <td>{{ processInstance.startTime }}</td>
       <td>{{ processInstance.businessKey }}</td>
       <td colspan="2">
-        <a state-circle 
+        <a state-circle
            incidents="processInstance.incidents"
            ng-click="selectActivity(processInstance.id, $event)"
            ng-href="#/process-instance/{{ processInstance.id }}?detailsTab=incidents-tab"></a>
@@ -43,3 +44,4 @@
 </table>
 
 <div paginator total-pages="pages.total" current-page="pages.current"></div>
+<!-- / CE - src/main/webapp/plugin/base/views/processDefinition/process-instance-table.html -->
