refactor(cockpit/styles): generate CSS from Less
Also allows to easily change the color and logos of header.

Closes CAM-1780

--- a/client/webapp/src/main/webapp/assets/styles/admin/app.less
+++ b/client/webapp/src/main/webapp/assets/styles/admin/app.less
@@ -1,8 +1,11 @@
+@import "../_vars.less";
+
 /**
  * Logo styling
  */
 .navbar .brand {
-   background-image: url('../../img/admin/app-logo.png');
+   // background-image: url('../../img/admin/app-logo.png');
+   background-image: url(@logo-admin);
    width: 210px;
 }
 
