--- a/client/webapp/src/main/webapp/assets/styles/cockpit/app.less
+++ b/client/webapp/src/main/webapp/assets/styles/cockpit/app.less
@@ -1,8 +1,11 @@
+@import "../_vars.less";
+
 /**
  * Logo styling
  */
 .navbar .brand {
-   background-image: url('../../img/cockpit/app-logo.png');
+   // background-image: url('../../img/cockpit/app-logo.png');
+   background: no-repeat url(@logo-cockpit);
    width: 220px;
 }
 
