--- a/client/webapp/src/main/webapp/assets/styles/tasklist/app.less
+++ b/client/webapp/src/main/webapp/assets/styles/tasklist/app.less
@@ -1,8 +1,11 @@
+@import "../_vars.less";
+
 /**
  * Logo styling
  */
 .navbar .brand {
-   background: no-repeat url('../../img/tasklist/app-logo.png');
+   // background: no-repeat url('../../img/tasklist/app-logo.png');
+   background: no-repeat url(@logo-tasklist);
    width: 215px;
 }
 
