refactor(cockpit/filter): introduce filter auto-completion
This commit introduces the concept of filter auto-completion to the
process instance and process definition views.

Auto completion adds additional filter criterias to a filter after it
has been changed in a view component.

Example:

The variable tab (process instance) sets the filter "activityId=foo"
without knowing about activity instances. Auto completion fills out the
activity instances necessary so that another component (the instance
tree) renders correctly based on the instance data.

Also cleans up:

- select activity instance in tab view
- append all parameters when redirect to */live in proc def / inst

Related to CAM-1727

--- a/client/webapp/src/main/webapp/plugin/base/app/views/processDefinition/called-process-definition-table.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processDefinition/called-process-definition-table.html
@@ -7,8 +7,7 @@
   <tbody>
     <tr ng-repeat="calledProcessDefinition in calledProcessDefinitions">
       <td>
-        <a ng-click="selectActivity(activity.id, $event)"
-           ng-href="#/process-definition/{{ calledProcessDefinition.id }}?parentProcessDefinitionId={{ processDefinition.id }}&amp;detailsTab=call-process-definitions-table">
+        <a ng-href="#/process-definition/{{ calledProcessDefinition.id }}?parentProcessDefinitionId={{ processDefinition.id }}&amp;detailsTab=call-process-definitions-table">
           {{ calledProcessDefinition.name }}
         </a>
       </td>
@@ -22,7 +21,7 @@
         <span ng-show="calledProcessDefinition.calledFromActivities.length > 1">
           <ul>
             <li ng-repeat="activity in calledProcessDefinition.calledFromActivities">
-              <a ng-click="selectActivity(calledProcessDefinition.calledFromActivities[0].id, $event)"
+              <a ng-click="selectActivity(activity.id, $event)"
                  ng-href="#/process-definition/{{ processDefinition.id }}?activityIds={{ activity.id }}&amp;detailsTab=call-process-definitions-table">
                 {{ activity.name }}
               </a>
