refactor(cockpit/proc-inst-view): various changes
This commit factors out common components:

- tab view -> selectActivity(...) has been moved to directive
- proc inst / def -> redirectToLive has been moved to routeUtil

Fixes:

- selection broken in instance / diagram view

Cleans up:

Code ;-)

Related to CAM-1727

--- a/client/webapp/src/main/webapp/plugin/base/app/views/processDefinition/called-process-definition-table.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processDefinition/called-process-definition-table.html
@@ -21,7 +21,7 @@
         <span ng-show="calledProcessDefinition.calledFromActivities.length > 1">
           <ul>
             <li ng-repeat="activity in calledProcessDefinition.calledFromActivities">
-              <a ng-click="selectActivity(activity.id, $event)"
+              <a cam-select-activity="activity.id"
                  ng-href="#/process-definition/{{ processDefinition.id }}?activityIds={{ activity.id }}&amp;detailsTab=call-process-definitions-table">
                 {{ activity.name }}
               </a>
