--- a/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/user-tasks-table.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/user-tasks-table.html
@@ -15,7 +15,7 @@
   <tbody>
     <tr ng-repeat="userTask in userTasks">
       <td>
-        <a ng-click="selectActivity(userTask.instance.activityId, $event)"
+        <a cam-select-activity="userTask.instance.activityId"
            ng-href="{{ getHref(userTask) }}">{{ userTask.instance.name || userTask.instance.id }}</a>
       </td>
       <td>
