improve(cockpit): refactoring of the page title and breadcrumbs
This commit also improve the handling of user task groups input:
 - prevent submission when the field is left empty
 - prevent submission when a group is already present

Related to CAM-1779, CAM-1182

--- a/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/identity-links-modal.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/identity-links-modal.html
@@ -20,7 +20,7 @@
           <tr ng-repeat="(delta, group) in groups">
             <td>{{ group.groupId }}</td>
             <td class="text-right">
-              <span class="btn"
+              <span class="btn action-button"
                     ng-click="removeItem()">
                 <i class="icon-ban-circle"></i>
               </span>
@@ -35,10 +35,12 @@
       <div class="input-append">
         <input type="text"
                ng-model="newItem"
-               name="newItem" />
+               name="newItem"
+               required />
         <button ng-click="addItem()"
                 type="submit"
-                class="btn btn-primary">
+                class="btn btn-primary"
+                ng-disabled="invalid()">
           <i class="icon-plus icon-white"></i>
         </button>
       </div>
