--- a/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/user-tasks-table.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/user-tasks-table.html
@@ -50,7 +50,7 @@
       <td class="group">
         <a ng-click="changeGroups()"
            ng-model="userTask"
-           class="btn"
+           class="btn action-button"
            help
            help-placement="'left'"
            help-text="Manage group(s) for '{{ userTask.name || userTask.id }}'">
