--- a/client/webapp/src/main/webapp/assets/styles/cockpit/app.less
+++ b/client/webapp/src/main/webapp/assets/styles/cockpit/app.less
@@ -9,11 +9,6 @@
    width: 220px;
 }
 
-
-/**------------------
-Tree
----------------------**/
-
 .activity-highlight  {
   -webkit-box-shadow: 0px 0px 4px 4px rgba(30, 144, 255, 1);
   -moz-box-shadow: 0px 0px 4px 4px rgba(30, 144, 255, 1);
@@ -50,14 +45,11 @@ Tree
   bottom: -0.65em;
 }
 
-
-.activity-instance-finished,
-.activity-bottom-right-position {
+.activity-instance-completed {
   text-shadow: -1px -1px 0 #b3b3b3, 1px 1px 0 #e9e9e9;
   background: url('../../img/stripe.png') #ddd;
-}
-.instance-tree .tree-node-label.activity-instance-finished {
-  color: #454545;
+  border: 1px solid #000000;
+  padding: 1px 8px;
 }
 
 .activity-bottom-left-position {
@@ -102,7 +94,6 @@ a.expand-collapse {
     filter: alpha(opacity=40);
   }
 }
-
 
 .invalid {
   color: #e9322d;
@@ -487,6 +478,8 @@ a.expand-collapse {
   .alert {
     font-size: 0.83em;
     margin-bottom: 0;
+    line-height: 20px;
+    padding: 8px 14px;
   }
 }
 
@@ -524,27 +517,6 @@ textarea.variable-type-string {
   padding-top: 10px;
   font-size: 0.83em;
 
-  .tree-node.selected > .tree-node-label {
-    -webkit-box-shadow: 0px 0px 2px 2px rgba(30, 144, 255, 1);
-    -moz-box-shadow: 0px 0px 2px 2px rgba(30, 144, 255, 1);
-    box-shadow: 0px 0px 2px 2px rgb(30, 144, 255);
-
-    background: #D5E8FF;
-  }
-
-  .remove {
-    display: none;
-  }
-
-  .tree-node.selected > .tree-node-label .remove {
-    display: inline-block;
-    opacity: 0.3;
-  }
-
-  .instance-tree:hover .tree-node-label .remove {
-    opacity: 1.0;
-  }
-
   a {
     text-decoration: none;
     color: inherit;
@@ -552,26 +524,92 @@ textarea.variable-type-string {
     vertical-align: middle;
   }
 
-  .btn-toggle i {
-    margin-top: 0;
+  .btn-toggle {
+    border: none;
+
+    i {
+      margin-top: 0;
+    }
+
   }
 
   .tree-node {
     margin: 2px 0;
+
+    ul {
+      margin-left: 19px;
+      margin-bottom: 10px;  
+    }
+
+  }
+
+  .tree-node-group {
+    position: relative;
+    display: table;
+    border-collapse: separate;
+
+    > .tree-node-label {
+      border-radius: 4px 0 0 4px;
+      border-right: none;
+      padding: 1px 5px;
+    }
+
+    > .tree-node-addon {
+      border-radius: 0 4px 4px 0;
+    }
   }
 
   .tree-node-label {
-    padding: 0px 5px;
+    display: table-cell;
+    position: relative;
+    width: 100%;
     border-radius: 4px;
     border: solid 1px #CCC;
+
+    .remove {
+      display: none;
+    }
+
+    &.selected {
+      -webkit-box-shadow: 0px 0px 2px 2px rgba(30, 144, 255, 1);
+      -moz-box-shadow: 0px 0px 2px 2px rgba(30, 144, 255, 1);
+      box-shadow: 0px 0px 2px 2px rgb(30, 144, 255);
+
+      background: #D5E8FF;
+
+      .remove {
+        display: inline-block;
+        opacity: 0.3;        
+      }
+    }
+
+    &:hover.selected .remove {
+      opacity: 1.0;
+    }
+
   }
 
-  .tree-node ul {
-    margin-left: 19px;
-    margin-bottom: 10px;
+  .tree-node-addon {
+    display: table-cell;
+    vertical-align: middle;    
+    padding: 4px 8px;
+    line-height: 1;
+    background-color: #ffffff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+
+    &.activity-instance-completed {
+      border: 1px solid #000000;
+    }
+
+    &.activity-instance-running {
+      background-color: #999999;
+      border-color: #999999;
+    }
+
   }
+
 }
-
 
 select.ng-invalid.ng-invalid-date-type-equal {
   border-color: #E9322D;
