fix(cockpit): refresh view on selection in a proper way in cockpit
related to CAM-1864

--- a/client/webapp/src/main/webapp/plugin/base/app/views/processDefinition/called-process-definition-table.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processDefinition/called-process-definition-table.html
@@ -13,7 +13,7 @@
       </td>
       <td>
         <span ng-show="calledProcessDefinition.calledFromActivities.length === 1">
-          <a ng-click="selectActivity(calledProcessDefinition.calledFromActivities[0].id, $event)"
+          <a cam-select-activity="calledProcessDefinition.calledFromActivities[0].id"
              ng-href="#/process-definition/{{ processDefinition.id }}?activityIds={{ calledProcessDefinition.calledFromActivities[0].id }}&amp;detailsTab=call-process-definitions-table">
             {{ calledProcessDefinition.calledFromActivities[0].name }}
           </a>
