--- a/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/called-process-instance-table.html
+++ b/client/webapp/src/main/webapp/plugin/base/app/views/processInstance/called-process-instance-table.html
@@ -18,8 +18,8 @@
         </a>
       </td>
       <td>
-        <a ng-click="selectActivity(calledProcessInstance.instance.id, $event)"
-           ng-href="#/process-instance/{{ processInstance.id }}?activityInstanceIds={{ calledProcessInstance.instance.id }}">
+        <a cam-select-activity-instance="calledProcessInstance.instance.id"
+           ng-href="#/process-instance/{{ processInstance.id }}?detailsTab=called-process-instances-tab&activityInstanceIds={{ calledProcessInstance.instance.id }}">
           {{ calledProcessInstance.instance.name }}
         <a>
       </td>
