--- a/client/webapp/src/main/webapp/plugin/jobDefinition/app/views/processDefinition/job-definition-table.html
+++ b/client/webapp/src/main/webapp/plugin/jobDefinition/app/views/processDefinition/job-definition-table.html
@@ -12,7 +12,7 @@
   <tbody>
     <tr ng-repeat="jobDefinition in jobDefinitions">
       <td>
-        <a ng-click="selectActivity(jobDefinition.activityId, $event)"
+        <a cam-select-activity="jobDefinition.activityId"
            ng-href="#/process-definition/{{ processDefinition.id }}?activityIds={{ jobDefinition.activityId }}&amp;detailsTab=job-definition-table">
           {{ jobDefinition.activityName }}
         </a>
