improve(cockpit/tree): adjust layout of root activity instance
related to CAM-1849

--- a/client/webapp/src/main/webapp/assets/styles/cockpit/app.less
+++ b/client/webapp/src/main/webapp/assets/styles/cockpit/app.less
@@ -543,6 +543,15 @@ textarea.variable-type-string {
 
   }
 
+  > .tree-node {
+    margin-left: 3px;
+
+    >.tree-node-group > .tree-node-label.selected > .remove {
+      padding: 3px 0;
+
+    }
+  }
+
   .tree-node-group {
     position: relative;
     display: table;
