improve(cockpit/tree): set border to none on remove button

--- a/client/webapp/src/main/webapp/assets/styles/cockpit/app.less
+++ b/client/webapp/src/main/webapp/assets/styles/cockpit/app.less
@@ -541,6 +541,10 @@ textarea.variable-type-string {
       margin-bottom: 10px;  
     }
 
+    .tree-node-label.selected > .remove {
+      border: none;
+    }
+
   }
 
   > .tree-node {
@@ -548,7 +552,6 @@ textarea.variable-type-string {
 
     >.tree-node-group > .tree-node-label.selected > .remove {
       padding: 3px 0;
-
     }
   }
 
